translate sort label

--- a/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
+++ b/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
@@ -157,7 +157,7 @@ msgstr "Zoeken"
 
 #: includes/blocks.inc:106
 msgid "Sort"
-msgstr "Sorteer resultaten op"
+msgstr "Sorteer op"
 
 #: includes/blocks.inc:114
 msgid "Submit"
