--- a/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
+++ b/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
@@ -310,29 +310,5 @@ msgid "Show the facet only when an eventtype is chosen"
 msgstr "Toon de facet enkel wanneer een eventtype is gekozen"
 
 #: includes/helpers.inc:106
-msgid "0-2 year"
-msgstr "0-2 jaar"
-
-#: includes/helpers.inc:110
-msgid "3-5 year"
-msgstr "3-5 jaar"
-
-#: includes/helpers.inc:114
-msgid "6-8 year"
-msgstr "6-8 jaar"
-
-#: includes/helpers.inc:118
-msgid "9-11 year"
-msgstr "9-11 jaar"
-
-#: includes/helpers.inc:122
-msgid "12-14 year"
-msgstr "12-14 jaar"
-
-#: includes/helpers.inc:126
-msgid "15-17 year"
-msgstr "15-17 jaar"
-
-#: includes/helpers.inc:130
-msgid "18+ year"
-msgstr "18+ jaar"
+msgid "year"
+msgstr "jaar"
