--- a/culturefeed_uitpas/translations/culturefeed_uitpas.nl.po
+++ b/culturefeed_uitpas/translations/culturefeed_uitpas.nl.po
@@ -966,3 +966,7 @@ msgstr "Kaartsysteem ID (Drupal)"
 #: views/handlers/culturefeed_uitpas_views_handler_filter_date.inc:28
 msgid "now"
 msgstr "Nu"
+
+#: includes/user_register.inc:29;180
+msgid "Register here, so you can follow your UiTPAS advantages and points balance online."
+msgstr "Registreer je UiTPAS en beheer jouw puntensaldo en voordelen online."
