--- a/culturefeed_calendar/translations/culturefeed_calendar.nl.po
+++ b/culturefeed_calendar/translations/culturefeed_calendar.nl.po
@@ -18,9 +18,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2015-03-17 15:11+0100\n"
-"PO-Revision-Date: 2015-03-17 16:14+0100\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2015-03-18 12:43+0100\n"
+"PO-Revision-Date: 2015-03-18 12:49+0100\n"
+"Last-Translator: Luk Dens <luk.dens@cultuurnet.be>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -95,7 +95,7 @@ msgstr "Bewaren"
 
 #: includes/pages.inc:242
 msgid "Possible dates"
-msgstr ""
+msgstr "Mogelijke data"
 
 #: includes/pages.inc:252;305
 msgid "When do you want to go?"
@@ -148,16 +148,16 @@ msgid "An error occured while saving your calendar"
 msgstr "Fout bij het bewaren in je kalender"
 
 #: includes/pages.inc:509
-msgid "Evenement verwijderen"
-msgstr ""
+msgid "Remove event"
+msgstr "Verwijder event"
 
 #: includes/pages.inc:537
-msgid "Are you sure you want to delete '!title' from your UiTkalender?"
+msgid "Are you sure you want to remove '!title' from your calender?"
 msgstr "Ben je zeker dat je '!title' wil verwijderen uit je kalender?"
 
 #: includes/pages.inc:546 theme/theme.inc:210;244
-msgid "Verwijderen"
-msgstr ""
+msgid "Remove"
+msgstr "Verwijderen"
 
 #: includes/pages.inc:614
 msgid "Your calendar event was deleted."
@@ -325,12 +325,12 @@ msgstr ""
 "niet bewaarde activiteiten: <span class=\"unread-activities\">0</small>"
 
 #: theme/theme.inc:207
-msgid "Inplannen"
-msgstr ""
+msgid "Schedule"
+msgstr "Inplannen"
 
 #: theme/theme.inc:240
-msgid "Verplaatsen"
-msgstr ""
+msgid "Reschedule"
+msgstr "Opnieuw inplannen"
 
 #: theme/theme.inc:274
 msgid "There was an error while searching the user"
