--- a/culturefeed_calendar/translations/culturefeed_calendar.nl.po
+++ b/culturefeed_calendar/translations/culturefeed_calendar.nl.po
@@ -245,7 +245,7 @@ msgstr "Kalender bekijken"
 
 #: theme/culturefeed-calendar-page.tpl.php:9
 msgid "Calendar"
-msgstr "Agenda"
+msgstr "UiTkalender"
 
 #: theme/culturefeed-calendar-page.tpl.php:16
 msgid "This calendar has not been shared yet."
