--- a/culturefeed_calendar/translations/culturefeed_calendar.nl.po
+++ b/culturefeed_calendar/translations/culturefeed_calendar.nl.po
@@ -244,7 +244,7 @@ msgid "View your calendar"
 msgstr "Kalender bekijken"
 
 #: theme/culturefeed-calendar-page.tpl.php:9
-msgid "Calendar"
+msgid "Personal calendar"
 msgstr "UiTkalender"
 
 #: theme/culturefeed-calendar-page.tpl.php:16
