UIV-1144 add format_plural on saved searches count

--- a/culturefeed_saved_searches/translations/culturefeed_saved_searches.nl.po
+++ b/culturefeed_saved_searches/translations/culturefeed_saved_searches.nl.po
@@ -188,6 +188,10 @@ msgstr ""
 "eens."
 
 #: theme/culturefeed-saved-searches-list.tpl.php:10
+msgid "1 saved search"
+msgstr "1 bewaarde zoekopdracht"
+
+#: theme/culturefeed-saved-searches-list.tpl.php:10
 msgid "@total saved searches"
 msgstr "@total bewaarde zoekopdrachten"
 
