--- a/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
+++ b/culturefeed_search_ui/translations/culturefeed_search_ui.nl.po
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2015-05-11 16:43+0200\n"
-"PO-Revision-Date: 2015-05-11 16:45+0100\n"
+"PO-Revision-Date: 2015-05-12 08:16+0100\n"
 "Last-Translator: Luk Dens <luk.dens@cultuurnet.be>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -530,7 +530,7 @@ msgstr "Annuleren"
 
 #: js/search_ui.js:0
 msgid "Apply"
-msgstr "Pas toe"
+msgstr "Toepassen"
 
 #: js/search_ui.js:0
 msgid "January"
