--- a/culturefeed_search_ui/translations/culturefeed_search_ui.fr.po
+++ b/culturefeed_search_ui/translations/culturefeed_search_ui.fr.po
@@ -295,3 +295,7 @@ msgid "@range from @count result"
 msgid_plural "@range from @count results"
 msgstr[0] "résultat @range de @count"
 msgstr[1] "résultats @range de @count"
+
+#: sites/all/modules/culturefeed/culturefeed_search_ui/js/location_autocomplete.js; sites/all/modules/culturefeed/culturefeed_search_ui/js/city_facet.js
+msgid "boroughs"
+msgstr "arrondissements"
