--- a/culturefeed_entry_ui/translations/culturefeed_entry_ui.nl.po
+++ b/culturefeed_entry_ui/translations/culturefeed_entry_ui.nl.po
@@ -825,3 +825,15 @@ msgstr "Adres verwijderen"
 #: culturefeed_elements/culturefeed_location_control/form/custom.inc:136
 msgid "Remove address"
 msgstr "Adres verwijderen"
+
+#: culturefeed_elements/culturefeed_tags_element/culturefeed_tags_element.module:85
+msgid "Hide tag"
+msgstr "Label verbergen"
+
+#: culturefeed_elements/culturefeed_tags_element/culturefeed_tags_element.module:96
+msgid "Remove tag"
+msgstr "Label verwijderen"
+
+#: culturefeed_elements/culturefeed_tags_element/culturefeed_tags_element.module:113
+msgid "Add tag"
+msgstr "Label toevoegen"
