--- a/culturefeed_uitpas/translations/culturefeed_uitpas.fr.po
+++ b/culturefeed_uitpas/translations/culturefeed_uitpas.fr.po
@@ -104,7 +104,7 @@ msgid "My advantages"
 msgstr ""
 
 #: culturefeed_uitpas.profile.inc:21 includes/profile_actions.inc:83 includes/profile_details.inc:50
-msgid "User history"
+msgid "Points history"
 msgstr ""
 
 #: culturefeed_uitpas.profile.inc:27 includes/profile_details.inc:60 includes/profile_notifications.inc:248
